postinstall/kafka-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kcluster-networkpolicy-deny-from-other-namespaces
  namespace: kafka
spec:
  podSelector:
    matchLabels: {}
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kcluster-networkpolicy-allow-all-tls-traffic
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      strimzi.io/name: kcluster
  ingress:
  - ports:
    - port: 9093
    from:
    - podSelector: {}
    - namespaceSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kcluster-networkpolicy-deny-all-egress
  namespace: kafka
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kcluster-networkpolicy-allow-entity-operator-egress
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      strimzi.io/name: kcluster-entity-operator
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kcluster-networkpolicy-allow-cluster-operator-egress
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      strimzi.io/kind: cluster-operator
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector: {}
